--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head> </head>
-    <body></body>
+    <head>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <img
+            src="https://s3.amazonaws.com/msoe/files/callouts/wide_xlrg_computer-science-landing-page.jpg"
+        />
+        <h1>this is the title</h1>
+        <p>this is my first paragraph</p>
+        <p>this is my second paragraph</p>
+    </body>
 </html>
