--- a/page2.html
+++ b/page2.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="morestyle.css" />
     </head>
     <body>
-        <h1>this is the title</h1>
+        <h1>welcome to my second page</h1>
         <p>this is my first paragraph</p>
         <p>this is my second paragraph</p>
         <img
             src="https://s3.amazonaws.com/msoe/files/callouts/wide_xlrg_computer-science-landing-page.jpg"
         />
         <br>
-        <a href=https://mail.google.com>Gmail</a>
-        <a href=/page2.html>Page 2</a>
+        <a href=https://classroom.google.com>Classroom</a>
     </body>
 </html>
