--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <a href=https://mail.google.com>Gmail</a>
         <br>
         <a href=/page2.html>Page 2</a>
+        <br>
+        <a href=/page3.html>Page 3</a>
     </body>
 </html>
