--- a/page3.html
+++ b/page3.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style2.css" />
+        <link rel="stylesheet" href="style3.css" />
     </head>
     <body>
-        <h1>welcome to my second page</h1>
+        <h1>welcome to my third page</h1>
         <p>this is my first paragraph</p>
         <p>this is my second paragraph</p>
         <img
             src="https://s3.amazonaws.com/msoe/files/callouts/wide_xlrg_computer-science-landing-page.jpg"
         />
         <br>
-        <a href=https://classroom.google.com>Classroom</a>
+        <a href=https://docs.google.com>Google Docs</a>
         <br>
-        <a href=/page3.html>Page 3</a>
+        <a href=/page2.html>Page 2</a>
         <br>
         <a href=/index.html>Page 1</a>
     </body>
