--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style2.css" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
         <h1>welcome to my second page</h1>
