--- a/page3.html
+++ b/page3.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style3.css" />
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
         <h1>welcome to my third page</h1>
