added a top bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
+        <div class="top-nav">
+            <a href="index.html">Page 1</a>
+            <a href="page2.html">Page 2</a>
+            <a href="page3.html">Page 3</a>
+        </div>
         <h1>this is the title</h1>
         <p>this is my first paragraph</p>
         <p>this is my second paragraph</p>
@@ -14,9 +19,5 @@
         />
         <br>
         <a href=https://mail.google.com>Gmail</a>
-        <br>
-        <a href=/page2.html>Page 2</a>
-        <br>
-        <a href=/page3.html>Page 3</a>
     </body>
 </html>
