--- a/page3.html
+++ b/page3.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style3.css" />
+        <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
+        <div class="top-nav">
+            <a href="index.html">Page 1</a>
+            <a href="page2.html">Page 2</a>
+            <a href="page3.html">Page 3</a>
+        </div>
         <h1>welcome to my third page</h1>
         <p>this is my first paragraph</p>
         <p>this is my second paragraph</p>
